force-app/main/default/objects/Campaign/fields/ACDF_Deadline__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Deadline__c</fullName>
    <formula>Market_Project__r.ACDF_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Deadline</label>
    <type>Text</type>
</CustomField>