force-app/main/default/objects/Campaign/fields/Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>Award_Guide__c</fullName>
    <formula>Market_Project__r.Award_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Guide</label>
    <type>Text</type>
</CustomField>