force-app/main/default/objects/Campaign/fields/Digital_Platform__c.field-meta.xml
<CustomField>
    <fullName>Digital_Platform__c</fullName>
    <description>If campaign is a digital advertising campaign, which platform was it focused on?</description>
    <label>Digital Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>