force-app/main/default/objects/Campaign/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>If the campaign takes the lead/contact to a landing page, link to it here</description>
    <label>Landing Page</label>
    <type>Url</type>
</CustomField>