force-app/main/default/objects/Campaign/fields/Magazine__c.field-meta.xml
<CustomField>
    <fullName>Magazine__c</fullName>
    <formula>Market_Project__r.Magazine_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine</label>
    <type>Text</type>
</CustomField>