force-app/main/default/objects/Campaign/fields/Magazine_Section__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Section__c</fullName>
    <formula>Market_Project__r.LY_Magazine_Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine Section</label>
    <type>Text</type>
</CustomField>