force-app/main/default/objects/Campaign/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Market Project associated with the Campaign</description>
    <label>Market Project</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>