force-app/main/default/objects/Campaign/fields/Market_Video__c.field-meta.xml
<CustomField>
    <fullName>Market_Video__c</fullName>
    <formula>Market_Project__r.Video__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Video</label>
    <type>Text</type>
</CustomField>