force-app/main/default/objects/Campaign/fields/Offer_incentive__c.field-meta.xml
<CustomField>
    <fullName>Offer_incentive__c</fullName>
    <description>Any offers or incentives included in the campaign</description>
    <label>Offer/incentive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>