force-app/main/default/objects/Campaign/fields/Product_Offered__c.field-meta.xml
<CustomField>
    <fullName>Product_Offered__c</fullName>
    <description>Product offered in the campaign (if any)</description>
    <label>Product Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>