force-app/main/default/objects/Campaign/fields/Profession_Type__c.field-meta.xml
<CustomField>
    <fullName>Profession_Type__c</fullName>
    <formula>Market_Project__r.Profession_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profession Type</label>
    <type>Text</type>
</CustomField>