force-app/main/default/objects/Campaign/fields/Publication_Month__c.field-meta.xml
<CustomField>
    <fullName>Publication_Month__c</fullName>
    <formula>Market_Project__r.Publication_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Month</label>
    <type>Text</type>
</CustomField>