force-app/main/default/objects/Campaign/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>Type of sales effort (ecommerce, AM appointment)</description>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>AM appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>