force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailAdjustedClickRate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailAdjustedClickRate__c</fullName>
    <description>The number of recipient link clickers divided by the number of recipient email openers</description>
    <formula>if(sbm__sbx_EmailUniqueOpenersRollup__c &gt; 0, sbm__sbx_EmailUniqueLinkClickersRollup__c / sbm__sbx_EmailUniqueOpenersRollup__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of recipient link clickers divided by the number of recipient email openers</inlineHelpText>
    <label>Adjusted Click Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>