force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailAmplificationFacebook__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailAmplificationFacebook__c</fullName>
    <description>Number of Facebook openings for every one targeted opener.</description>
    <formula>if(sbm__sbx_EmailUniqueOpenersRollup__c &gt; 0, sbm__sbx_EmailFacebookOpensRollup__c / sbm__sbx_EmailUniqueOpenersRollup__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Facebook openings for every one targeted opener.</inlineHelpText>
    <label>Facebook Amp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>