force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailBodyHTML__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailBodyHTML__c</fullName>
    <label>Email Body HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>