force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailBodyText__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailBodyText__c</fullName>
    <label>Email Body Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>