force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailBounceRate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailBounceRate__c</fullName>
    <description>Total number of bounced emails divided by total number of sent emails.</description>
    <formula>if(sbm__sbx_EmailNumberSent__c &gt; 0, sbm__sbx_EmailNumberBouncedRollup__c / sbm__sbx_EmailNumberSent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of bounced emails divided by total number of sent emails.</inlineHelpText>
    <label>Bounce Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>