force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailFacebookOpensRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailFacebookOpensRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Web opens of a Soapbox Mailer email across all Facebook postings by campaign members.</description>
    <inlineHelpText>Number of Web opens of a Soapbox Mailer email across all Facebook postings by campaign members.</inlineHelpText>
    <label>Facebook Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>