force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailLinksClickedAggregate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailLinksClickedAggregate__c</fullName>
    <description>This is the total number of all the times any link was clicked in this email campaign.</description>
    <inlineHelpText>This is the total number of all the times any link was clicked in this email campaign.</inlineHelpText>
    <label>Links Clicked Aggregate</label>
    <summarizedField>sbm__sbx_EmailLink__c.sbm__sbx_ClickCount__c</summarizedField>
    <summaryForeignKey>sbm__sbx_EmailLink__c.sbm__sbx_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>