force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberOfRecipients__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberOfRecipients__c</fullName>
    <description>Number of campaign members that have received this email (campaign members that were sent the email minus those campaign members that bounced).</description>
    <inlineHelpText>Number of campaign members that have received this email (campaign members that were sent the email minus those campaign members that bounced).</inlineHelpText>
    <label># Recipients</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Sent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.sbm__sbx_EmailBounced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>