force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberOfRecipientsRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberOfRecipientsRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of campaign members that have received this email (campaign members that were sent the email minus those campaign members that bounced).</description>
    <inlineHelpText>Number of campaign members that have received this email (campaign members that were sent the email minus those campaign members that bounced).</inlineHelpText>
    <label># Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>