force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberOfTargets__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberOfTargets__c</fullName>
    <description>Summary field of the count of the campaign members in a Soapbox Mailer email campaign that have a status of &quot;Targeted&quot;.</description>
    <inlineHelpText>The number of targeted recipients for this email campaign (the number of campaign members with the status of &quot;Targeted&quot;).</inlineHelpText>
    <label># Targets</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Targeted</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>