force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberOfTargetsRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberOfTargetsRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Targets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>