force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberSent__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberSent__c</fullName>
    <description>Summary field of the count of the campaign members in a Soapbox Mailer email campaign that have a status of &quot;Sent&quot;.</description>
    <inlineHelpText>The number of individuals that have been sent this email campaign (the number of campaign members with the status of &quot;Sent&quot;).</inlineHelpText>
    <label># Sent</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>