force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailNumberSentRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailNumberSentRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of campaign members that have been sent this email (regardless of bounce status, and not including campaign member status of &quot;Rejected&quot;).</description>
    <inlineHelpText>Number of campaign members that have been sent this email (regardless of bounce status, and not including campaign member status of &quot;Rejected&quot;).</inlineHelpText>
    <label># Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>