force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailOpenRate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailOpenRate__c</fullName>
    <description>The number of unique email openers divided by the number of non-bounced recipients</description>
    <formula>if((sbm__sbx_EmailNumberOfRecipients__c) &gt; 0, sbm__sbx_EmailUniqueOpenersRollup__c / (sbm__sbx_EmailNumberOfRecipients__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of unique email openers divided by the number of non-bounced recipients</inlineHelpText>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>