force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailSender__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailSender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the email sender that will be the From address for this email.</description>
    <inlineHelpText>This is the email sender that will be the From address for this email.</inlineHelpText>
    <label>Email Sender</label>
    <referenceTo>sbm__AWS_SES_Sender__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>