force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailSocialSharing__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailSocialSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the display of social sharing links within the body of the email.</description>
    <inlineHelpText>Controls the display of social sharing links within the body of the email. Checking this box will include the social sharing links in the email.</inlineHelpText>
    <label>Social Sharing</label>
    <type>Checkbox</type>
</CustomField>