force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailsOpenedAggregate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailsOpenedAggregate__c</fullName>
    <description>This is the total number of all the times the system tracked that an email was opened in this email campaign.</description>
    <inlineHelpText>This is the total number of all the times the system tracked that an email was opened in this email campaign.</inlineHelpText>
    <label>Emails Opened Aggregate</label>
    <summarizedField>CampaignMember.sbm__sbx_EmailOpenCount__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>