force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailSubject__c</fullName>
    <description>This is the subject line of the email.</description>
    <inlineHelpText>This is the subject line of the email.</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>