force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field allows you to choose which email template will be associated with this campaign.</description>
    <inlineHelpText>This field allows you to choose which email template will be associated with this campaign.</inlineHelpText>
    <label>Email Template</label>
    <referenceTo>sbm__EmailTemplate__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>