force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailUniqueLinkClickersRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailUniqueLinkClickersRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of unique number of recipients (campaign members) that clicked on at least one link from the email.</description>
    <inlineHelpText>Count of unique number of recipients (campaign members) that clicked on at least one link from the email.</inlineHelpText>
    <label>Unique Link Clickers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>