force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailUniqueOpenersRollup__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailUniqueOpenersRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the count of unique number of recipients (campaign members) that the system tracked as opening the email.</description>
    <inlineHelpText>This is the count of unique number of recipients (campaign members) that the system tracked as opening the email.</inlineHelpText>
    <label>Unique Email Openers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>