force-app/main/default/objects/Campaign/fields/sbm__sbx_EmailUnsubscribeRate__c.field-meta.xml
<CustomField>
    <fullName>sbm__sbx_EmailUnsubscribeRate__c</fullName>
    <description>The number unsubscribed divided by the number of non-bounced recipients</description>
    <formula>if ((sbm__sbx_EmailNumberOfRecipients__c) &gt; 0, sbm__sbx_EmailNumberUnsubscribedRollup__c /  (sbm__sbx_EmailNumberOfRecipients__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number unsubscribed divided by the number of non-bounced recipients</inlineHelpText>
    <label>Unsubscribe Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>