force-app/main/default/objects/Campaign/recordTypes/Default_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Default_Campaign</fullName>
    <active>true</active>
    <description>Default Campaign Record Type</description>
    <label>Default</label>
</RecordType>