force-app/main/default/objects/Campaign/recordTypes/sbm__sbx_SoapboxMailer_Campaign.recordType-meta.xml
<RecordType>
    <fullName>sbm__sbx_SoapboxMailer_Campaign</fullName>
    <active>true</active>
    <description>A Soapbox Mailer email campaign.</description>
    <label>Soapbox Mailer</label>
</RecordType>