force-app/main/default/objects/Campaign/validationRules/sbm__sbx_EmailRequireSubject.validationRule-meta.xml
<ValidationRule>
    <fullName>sbm__sbx_EmailRequireSubject</fullName>
    <active>true</active>
    <description>This requires the user to enter a subject line before saving a Soapbox Mailer campaign.</description>
    <errorConditionFormula>AND(sbm__sbx_EmailSubject__c = null, $RecordType.DeveloperName = &quot;sbx_SoapboxMailer_Campaign&quot;)</errorConditionFormula>
    <errorDisplayField>sbm__sbx_EmailSubject__c</errorDisplayField>
    <errorMessage>Please enter a subject line.</errorMessage>
</ValidationRule>