force-app/main/default/objects/Campaign/validationRules/sbm__sbx_EmailRequireTemplate.validationRule-meta.xml
<ValidationRule>
    <fullName>sbm__sbx_EmailRequireTemplate</fullName>
    <active>true</active>
    <description>This requires the user to choose an email template before saving a Soapbox Mailer campaign.</description>
    <errorConditionFormula>AND(sbm__sbx_EmailTemplate__c = null, $RecordType.DeveloperName = &quot;sbx_SoapboxMailer_Campaign&quot;)</errorConditionFormula>
    <errorDisplayField>sbm__sbx_EmailTemplate__c</errorDisplayField>
    <errorMessage>Please choose an email template.</errorMessage>
</ValidationRule>