force-app/main/default/objects/Campaign/listViews/Strategies.listView-meta.xml
<ListView>
    <fullName>Strategies</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.TOT_CONTACTS</columns>
    <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Strategy</value>
    </filters>
    <label>Strategies</label>
    <language>en_US</language>
</ListView>